--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -37,7 +37,10 @@
 
             <section id="resultsection">
                 <strong>Results:</strong>
-                <div id="results"></div>
+                <div id="results">
+                    <div id="polarity"></div>
+                    <div id="subjectivity"></div>
+                </div>
             </section>
         </main>
 
