--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -29,8 +29,10 @@
                         <p>Put an article in the text form and check the sentiment.</p>
                     </div>
                 <form id="textform" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" placeholder="Article">
-                    <input id="submitButton" type="button" name="" value="Check" onclick="return Client.handleSubmit(event)"  >
+                    
+                    <input id="name" type="text" name="input" placeholder="Copy and Paste the Article here...">
+                    
+                    <input id="submitButton" type="button" name="" value="CHECK" onclick="return Client.handleSubmit(event)"  >
                 </form>
                 </div>
             <section>
