--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,5 +1,9 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 40px;
+  background-color: navy;
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 800;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 40px;
 }
